@@ -126,6 +126,7 @@ public:
 	virtual void process() { }
 	
 	bool hitdetect(CObject &hitobject);
+	bool hitdetectWithTilePropertyRect(const Uint16 Property, SDL_Rect &rect, const int res);
 	bool hitdetectWithTileProperty(Uint16 Property, Uint16 x, Uint16 y);
 	virtual void kill();
 	void blink(Uint16 frametime);
