@@ -3,6 +3,8 @@ Commander Genius Release :
 
 v0.3.2.5:
 ---------
+- Keen now can climb poles (Galaxy)
+- Keen now can hang on cliff and climb then up (Galaxy)
 - improved some galaxy physics
 
 v0.3.2.4:
